[maven-release-plugin]  copy for tag XSTREAM_1_4_8